# gnome-file-manager

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  TODO  aclocal.m4  configure  configure.in  gnome-file-manager.desktop.in  mkinstalldirs  xmldocs.make
help/: Makefile.in
help/C/: Makefile.am  Makefile.in  gnome-file-manager.xml
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  POTFILES.in  gnome-file-manager.pot
src/: Makefile.am  Makefile.in  callbacks.c  configuration.c  configuration.h  copy_move_delete.c  copy_move_delete.h  debug.h  file_list.c  file_list.h  file_list_icons.c  file_list_icons.h  file_list_interface.c  file_list_interface.h  file_list_tips.c  file_list_tips.h  gfm.glade2  gfm_list_store.c  gfm_list_store.h  gfm_vfs.c  gfm_vfs.h  interface.c  interface.h  lister.c  lister.h  main.c  mime_actions.c  mime_actions.h  preferences.c  preferences.h  selections.c  selections.h  special_files.c  special_files.h  special_files_symlinks.c  special_files_symlinks.h  wd_entry.c  wd_entry.h
testing/: Makefile.am  Makefile.in  listview.c
